WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88119
REGRESSION (
r99448
) Zero-sized plug-ins no longer get an NPP_SetWindow call
https://bugs.webkit.org/show_bug.cgi?id=88119
Summary
REGRESSION (r99448) Zero-sized plug-ins no longer get an NPP_SetWindow call
Brady Eidson
Reported
2012-06-01 12:07:09 PDT
REGRESSION (
r99448
) Zero-sized plugins never get an NPP_SetWindow call The regression from 99448 was specifically about Netscape plug-ins on Mac, but it's a theoretical problem on all WK2 ports. In radar as <
rdar://problem/11335622
>
Attachments
Patch v1
(3.25 KB, patch)
2012-06-01 12:15 PDT
,
Brady Eidson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-06-01 12:15:59 PDT
Created
attachment 145354
[details]
Patch v1
Anders Carlsson
Comment 2
2012-06-01 12:22:54 PDT
Comment on
attachment 145354
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=145354&action=review
> Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.cpp:715 > + m_hasCalledSetWindow = true;
I think you should set this to true in callSetWindow, since it can be called from platformPaint as well.
Brady Eidson
Comment 3
2012-06-01 12:24:57 PDT
http://trac.webkit.org/changeset/119260
Brady Eidson
Comment 4
2012-06-01 12:28:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 145354
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=145354&action=review
> > > Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.cpp:715 > > + m_hasCalledSetWindow = true; > > I think you should set this to true in callSetWindow, since it can be called from platformPaint as well.
I was trying to keep it local to where it was used, having done an (apparently faulty) search for other callers and coming up empty. Makes sense, and will do in a followup.
Brady Eidson
Comment 5
2012-06-01 12:32:36 PDT
Followed up in
http://trac.webkit.org/changeset/119261
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug